[project]
name = "content-pipeline-api"
version = "0.1.0"
description = "Content pipeline API with sequential stage orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.52",
    "httpx>=0.28",
    "google-genai>=1.0",
    "arq>=0.26",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "sse-starlette>=2.2",
    "textstat>=0.7",
    "lxml>=5.3",
    "beautifulsoup4>=4.12",
    "redis>=5.2",
    "watchfiles>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
